# mayb

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README.md  configure  configure.ac
debian/: changelog  control  copyright
src/: Makefile.am  Makefile.in  mayb.cpp  maybe.cpp
